finish Java friendlyDescription